--- a/popup.html
+++ b/popup.html
@@ -229,7 +229,15 @@
   
   <div class="footer">
     <p>Made with ❤️ by <strong>Feri Febria Laksana</strong></p>
-    <p>Using AI • Version 1.0</p>
+    <p>Using AI • Version 1.1</p>
+    <p style="margin-top: 10px;">
+      <a href="https://saweria.co/vnot01" target="_blank" style="color: #2E8B57; text-decoration: none; font-weight: 600; padding: 5px 10px; background: rgba(255, 255, 255, 0.2); border-radius: 15px; border: 1px solid rgba(255, 255, 255, 0.3); transition: all 0.3s ease;">
+        ☕ Support Development
+      </a>
+    </p>
+    <p style="font-size: 10px; color: rgba(255, 255, 255, 0.7); margin-top: 5px;">
+      Jazakumullah Khairan 🙏
+    </p>
   </div>
   
   <script src="popup.js"></script>
